--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <title>Todo List APP test</title>
+        <title>batch 4 is just amazing</title>
         <style>
             a {
                 text-decoration: none;
